# wrapastac

./: .gitignore  LICENSE  README.md  justfile  prek.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
graphify-out/: .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
notebooks/: example.ipynb
src/wrapastac/: __init__.py  _base.py  _crs.py  _harmonise.py  _items.py  exceptions.py
src/wrapastac/collections/: __init__.py  dem.py  hls.py  landsat.py  lidar.py  lulc.py  sentinel1.py  sentinel2.py
src/wrapastac/geometry/: __init__.py
src/wrapastac/providers/: __init__.py  _base.py  copernicus_dataspace.py  element84.py  planetary_computer.py
tests/: conftest.py  test_base.py  test_collections.py  test_geometry.py  test_items.py  test_wrapastac.py
