[project]
name = "wrapastac"
description = "A Python SDK to wrap STAC satellite endpoints "
authors = [{name = "Gerald Laura-Moore", email = "gerald.moore.mail@gmail.com"}]
version = "0.1.0"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pystac-client>=0.7",
    "odc-stac>=0.3",
    "rioxarray>=0.15",
    "shapely>=2.0",
    "pyproj>=3.6",
    "planetary-computer>=1.0",
    "xarray>=2024.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "geopandas>=0.14",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "ty>=0.0.14",
    "prek>=0.3.3",
    "graphifyy>=0.5.4",
    "ipykernel>=7.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line-too-long
    "T201",  # print statement
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wrapastac"]
